@@ -809,6 +809,8 @@ public class GraphHopper implements GraphHopperAPI {
     }
 
     private void checkProfilesConsistency() {
+        // todo: strictly speaking no profiles are needed, e.g. when we only use the location index, but this is rather
+        // the exception. we can move this check closer to the code that actually requires profiles after #1901
         if (profilesByName.isEmpty()) {
             throw new IllegalArgumentException("No routing profiles have been specified, you need to configure at least one");
         }
@@ -1353,6 +1355,8 @@ public class GraphHopper implements GraphHopperAPI {
             // Merge profile hints with request hints, the request hints take precedence.
             // Note that so far we do not check if overwriting the profile hints actually works with the preparation
             // for LM/CH. Later we should also limit the number of parameters that can be used to modify the profile.
+            // todo: since we are not dealing with block_area here yet we cannot really apply any merging rules
+            // for it, see discussion here: https://github.com/graphhopper/graphhopper/pull/1958#discussion_r395462901
             PMap hints = new PMap();
             hints.putAll(profile.getHints());
             hints.putAll(requestHints);
